-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.6.1, Qt Creator 4.0.0-beta1
-
Windows 7 64 bit
- Have a Qt version that contains examples configured in "Tools" -> "Options..." -> "Build & Run" -> "Qt Versions".
- Go to Welcome mode, "Examples" tab.
- Type a search phrase into the edit control so that you only see a few examples.
- Go to "Tutorials" tab.
- Go back to "Examples" tab.
You'll see only the few examples that passed the filter but the search phrase is gone. This seems as if these were all available examples.
The same happens on the "Tutorials" tab.
When coming back to a tab, the filter should either have been reset or the used search phrase should still be visible.